# interpolate-antialiasing

./: .gitignore  README.md  test.py
godbolt/: step_zero.cpp
notebooks/: analysis.ipynb  gradcheck.ipynb  tensor_iterator_playground.ipynb  tensor_iterator_playground_static_shape.ipynb
playground_cuda/: CMakeLists.txt  main.cpp  playground.cu  playground.h
profiling/: CMakeLists.txt  README.md  main.cpp
step_four/: aa_interpolation_impl.h
step_one/: aa_interpolation_impl.h
step_three/: aa_interpolation_impl.h  aa_separable_single_dim_loop2d_impl.h
step_two/: aa_interpolation_impl.h
step_two_dot_one/: aa_interpolation_impl.h
step_two_dot_three/: aa_interpolation_impl.h
step_two_dot_two/: aa_interpolation_backward_impl.h  aa_interpolation_impl.h  extension_interpolate.cpp
step_two_dot_two/cuda/: aa_interpolation_impl.cuh  extension_interpolate.cpp
step_zero/: aa_interpolation_impl.h  extension_interpolate.cpp
